[workspace]
members = [
    "pmdrtdx-bindings",
    "hyperbeam-launcher",
    "hyperbeam-unity",
    "hyperbeam-rtdx",
    "hyperbeam-essentials",
    "multiplayer-test"
]

exclude = [
    "multiplayer-server"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[patch.crates-io]
ring = { git = "https://github.com/skyline-rs/ring" }
webpki = { git = "https://github.com/skyline-rs/webpki" }
