[package]
name = "hyperbeam-launcher"
version = "0.1.0"
authors = ["techticks <techticksdev@gmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01003D200BAA2000"

[lib]
crate-type = ["cdylib"]

[dependencies]
proc-macro2 = "=1.0.26"
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
pmdrtdx-bindings = { path = "../pmdrtdx-bindings" }
hyperbeam-unity = { path = "../hyperbeam-unity" }
hyperbeam-rtdx = { path = "../hyperbeam-rtdx" }
lazy_static = "1.4.0"
image = "0.23.14"
minreq = { version = "=2.2.1", features = ["https", "json-using-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8.21"
semver = "1"
ring = "=0.16.15"
zip = { version = "0.5.13", default-features = false, features = ["deflate", "bzip2"] }
